<resources>
    <string name="app_name">Dublin Bikes</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="take_bike">Take a bike</string>
    <string name="put_bike">Put back a bike</string>
    <string name="ok">Okay</string>
    <string name="disconnected_maps">Unable to connect to Google Maps</string>
    <string name="disconnected_bikes">Unable to connect to Service</string>
    <string name="no_internet">No Connection</string>
    <string name="error_parsing">Error parsing data</string>
    <string name="error">Error</string>
    <string name="refresh">Retry</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="skip">Skip Registration >></string>
    <string name="login_box">To do this you must Login. Do you want to login now?</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_journeys">Journeys</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_temp_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_display_name">Display name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_show_menu">Show the menu icon</string>
    <string name="pref_description_show_menu">The navigation drawer can still be accessed by swiping from the side of the screen</string>
    <string name="remove_favourite_box">Do you want to remove this station from your Favourites</string>
</resources>
